--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <section class="hero">
           <article class="description">
             <h2>Absolutely astonishing breaking news!</h2>
-            <p>Organic raw denim Vice keffiyeh lomo Kickstarter art lomo Kickstarter art four loko. Organic raw denim Vice keffiyeh lomo Kickstarter art lomo Kickstarter art four loko.</p>
+            <p>Organic raw denim Vice keffiyeh lomo Kickstarter art lomo Kickstarter art four loko. Organic raw denim Vice keffiyeh lomo Kickstarter art lomo Kickstarter art four loko. Organic raw denim Vice keffiyeh lomo Kickstarter art lomo Kickstarter art four loko.</p>
           </article>
         </section>
 
@@ -61,54 +61,62 @@
         </section>
 
         <section class="scores">
-          <table class="scores__table">
-            <thead>
-              <tr>
-                <th>date</th>
-                <th>team</th>
-                <th colspan="2">score</th>
-                <th>team</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td>Friday</td>
-                <td>Bears</td>
-                <td>95</td>
-                <td class="winner">109</td>
-                <td class="winner">Cubs</td>
-              </tr>
-              <tr>
-                <td>Friday</td>
-                <td class="winner">Otters</td>
-                <td class="winner">3</td>
-                <td>1</td>
-                <td>Cubs</td>
-              </tr>
-              <tr>
-                <td>Saturday</td>
-                <td class="winner">Wolves</td>
-                <td class="winner">7</td>
-                <td>0</td>
-                <td>Panthers</td>
-              </tr>
-              <tr>
-                <td>Sunday</td>
-                <td>Hawks</td>
-                <td>11</td>
-                <td class="winner">12</td>
-                <td class="winner">Capons</td>
-              </tr>
-              <tr>
-                <td>Sunday</td>
-                <td class="winner">Stags</td>
-                <td class="winner">6</td>
-                <td>2</td>
-                <td>Foxes</td>
-              </tr>
+          <div class="contained_table">
+            <table class="scores__table">
+              <thead>
+                <tr>
+                  <th>date</th>
+                  <th class="scores__location">location</th>
+                  <th>team</th>
+                  <th colspan="2">score</th>
+                  <th>team</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>Friday</td>
+                  <td class="scores__location">Brighton</td>
+                  <td>Bears</td>
+                  <td>95</td>
+                  <td class="winner">109</td>
+                  <td class="winner">Cubs</td>
+                </tr>
+                <tr>
+                  <td>Friday</td>
+                  <td class="scores__location">Worthington</td>
+                  <td class="winner">Otters</td>
+                  <td class="winner">3</td>
+                  <td>1</td>
+                  <td>Cubs</td>
+                </tr>
+                <tr>
+                  <td>Saturday</td>
+                  <td class="scores__location">Littlehampton</td>
+                  <td class="winner">Wolves</td>
+                  <td class="winner">7</td>
+                  <td>0</td>
+                  <td>Panthers</td>
+                </tr>
+                <tr>
+                  <td>Sunday</td>
+                  <td class="scores__location">Portslade</td>
+                  <td>Hawks</td>
+                  <td>11</td>
+                  <td class="winner">12</td>
+                  <td class="winner">Capons</td>
+                </tr>
+                <tr>
+                  <td>Sunday</td>
+                  <td class="scores__location">Hove</td>
+                  <td class="winner">Stags</td>
+                  <td class="winner">6</td>
+                  <td>2</td>
+                  <td>Foxes</td>
+                </tr>
 
-            </tbody>
-          </table>
+              </tbody>
+            </table>
+          </div>
         </section>
 
         <section class="weather">
